--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of a journalist showcasing articles, social media, and contact info.">
-    <title>John Doe - Journalist Portfolio</title>
+    <title>Tanya Kaushal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <h1>John Doe</h1>
-            <p>Journalist | Writer | Editor</p>
+            <h1>Tanya Kaushal</h1>
+            <p>Journalist</p>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -27,38 +27,56 @@
     <!-- About Me Section -->
     <section id="about">
         <div class="container">
-            <h2>About Me</h2>
-            <p>I'm John Doe, a journalist with a passion for storytelling. Over the past 5 years, I've written on politics, technology, and lifestyle. I aim to bring fresh perspectives to every story.</p>
-            <img src="assets/images/profile.jpg" alt="John Doe">
+            <h2>About</h2>
+            <p>I'm a financial journalist with skills in data and multimedia. Currently, I work as a reporter covering European private markets with The Drawdown with a particular focus on tax, ESG, and AI.</p>
+            <p>Before The Drawdown, I was a data reporter with Yahoo Finance in New York, where I covered US stocks, economy, politics, tech and infrastructure in a data-driven breaking news and long-form manner. I also have multimedia skills in audio-video broadcast learned through my undergraduate studies at City University of London and data skills obtained via my graduate studies at Columbia Journalism School.</p>
+            <p>Outside of work, I am an avid language learner. Trying to master Japanese these days.</p>
+            <img src="assets/images/profile.jpg" alt="Tanya Kaushal">
         </div>
     </section>
 
     <!-- Portfolio Section -->
     <section id="portfolio">
         <div class="container">
-            <h2>My Work</h2>
+            <h2>The Drawdown Articles</h2>
             <div class="portfolio-item">
-                <h3>Article Title</h3>
-                <p>Short description of the article, what it covers, and any highlights.</p>
-                <a href="https://link-to-article.com" target="_blank">Read More</a>
+                <h3>Exit music (for a fund manager)</h3>
+                <p>Which jurisdictions in Europe have an exit tax and what difference does it make?</p>
+                <a href="https://the-drawdown.com/index.php/article/exit-music-for-a-fund-manager" target="_blank">Read More</a>
             </div>
             <div class="portfolio-item">
-                <h3>Article Title</h3>
-                <p>Short description of the article, what it covers, and any highlights.</p>
-                <a href="https://link-to-article.com" target="_blank">Read More</a>
+                <h3>PE reacts to Reeves softening the non-dome rule</h3>
+                <p>The chancellor has announced amendments to the original plans to abolish non-dom status</p>
+                <a href="https://the-drawdown.com/index.php/article/pe-reacts-to-reeves-softening-the-non-dom-rule" target="_blank">Read More</a>
             </div>
         </div>
     </section>
-
+    
+ <!-- Portfolio Section -->
+    <section id="portfolio">
+        <div class="container">
+            <h2>Yahoo Finance Articles</h2>
+            <div class="portfolio-item">
+                <h3>3 charts show how the gender pay gap is still an issue in the US</h3>
+                <p>Despite progress made over the years, the gender pay gap still exists across all racial and ethnic groups in the US.</p>
+                <a href="https://finance.yahoo.com/news/3-charts-show-how-the-gender-pay-gap-is-still-an-issue-in-the-us-133006829.html" target="_blank">Read More</a>
+            </div>
+            <div class="portfolio-item">
+                <h3>How CVS evolved from retail pharmacy into health care behemoth</h3>
+                <p>CVS came to dominate the retail pharmacy industry and beyond. Some experts wonder whether retail's reach into health care could go too far.</p>
+                <a href="https://finance.yahoo.com/news/how-cvs-evolved-from-retail-pharmacy-into-health-care-behemoth-130515054.html" target="_blank">Read More</a>
+            </div>
+        </div>
+    </section>
+    
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
-            <h2>Contact Me</h2>
-            <p>Feel free to get in touch with me via email or social media.</p>
+            <h2>Contact</h2>
+            <p>Feel free to get in touch with me via email or LinkedIn.</p>
             <ul>
-                <li><a href="mailto:email@example.com">Email</a></li>
-                <li><a href="https://twitter.com/johndoe" target="_blank">Twitter</a></li>
-                <li><a href="https://linkedin.com/in/johndoe" target="_blank">LinkedIn</a></li>
+                <li><a href="mailto:kaushaltanya43@example.com">Email</a></li>
+                <li><a href="https://uk.linkedin.com/in/tanya-kaushal-journalist-" target="_blank">LinkedIn</a></li>
             </ul>
         </div>
     </section>
@@ -66,7 +84,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 John Doe | All Rights Reserved</p>
+            <p>&copy; 2025 Tanya Kaushal | All Rights Reserved</p>
         </div>
     </footer>
 
