--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#Articles">Articles</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -28,15 +28,13 @@
     <section id="about">
         <div class="container">
             <h2>About</h2>
-            <p>I'm a financial journalist with skills in data and multimedia. Currently, I work as a reporter covering European private markets with The Drawdown with a particular focus on tax, ESG, and AI.</p>
-            <p>Before The Drawdown, I was a data reporter with Yahoo Finance in New York, where I covered US stocks, economy, politics, tech and infrastructure in a data-driven breaking news and long-form manner. I also have multimedia skills in audio-video broadcast learned through my undergraduate studies at City University of London and data skills obtained via my graduate studies at Columbia Journalism School.</p>
+            <p>I'm a financial journalist with skills in data and multimedia. Currently, I work as a reporter covering European private markets with The Drawdown with a particular focus on tax, ESG, and AI.Before The Drawdown, I was a data reporter with Yahoo Finance in New York, where I covered US stocks, economy, politics, tech and infrastructure in a data-driven breaking news and long-form manner. I also have multimedia skills in audio-video broadcast learned through my undergraduate studies at City University of London and data skills obtained via my graduate studies at Columbia Journalism School.</p>
             <p>Outside of work, I am an avid language learner. Trying to master Japanese these days.</p>
-            <img src="assets/images/profile.jpg" alt="Tanya Kaushal">
         </div>
     </section>
 
     <!-- Portfolio Section -->
-    <section id="portfolio">
+    <section id="Articles">
         <div class="container">
             <h2>The Drawdown Articles</h2>
             <div class="portfolio-item">
@@ -53,7 +51,7 @@
     </section>
     
  <!-- Portfolio Section -->
-    <section id="portfolio">
+    <section id="Articles">
         <div class="container">
             <h2>Yahoo Finance Articles</h2>
             <div class="portfolio-item">
@@ -73,7 +71,6 @@
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>Feel free to get in touch with me via email or LinkedIn.</p>
             <ul>
                 <li><a href="mailto:kaushaltanya43@example.com">Email</a></li>
                 <li><a href="https://uk.linkedin.com/in/tanya-kaushal-journalist-" target="_blank">LinkedIn</a></li>
