--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
+    <!-- Articles Section -->
     <section id="Articles">
         <div class="container">
             <h2>The Drawdown Articles</h2>
@@ -42,7 +42,7 @@
                 <p>Which jurisdictions in Europe have an exit tax and what difference does it make?</p>
                 <a href="https://the-drawdown.com/index.php/article/exit-music-for-a-fund-manager" target="_blank">Read More</a>
             </div>
-            <div class="portfolio-item">
+            <div class="articles-item">
                 <h3>PE reacts to Reeves softening the non-dome rule</h3>
                 <p>The chancellor has announced amendments to the original plans to abolish non-dom status</p>
                 <a href="https://the-drawdown.com/index.php/article/pe-reacts-to-reeves-softening-the-non-dom-rule" target="_blank">Read More</a>
@@ -50,16 +50,16 @@
         </div>
     </section>
     
- <!-- Portfolio Section -->
+ <!-- Articles Section -->
     <section id="Articles">
         <div class="container">
             <h2>Yahoo Finance Articles</h2>
-            <div class="portfolio-item">
+            <div class="articles-item">
                 <h3>3 charts show how the gender pay gap is still an issue in the US</h3>
                 <p>Despite progress made over the years, the gender pay gap still exists across all racial and ethnic groups in the US.</p>
                 <a href="https://finance.yahoo.com/news/3-charts-show-how-the-gender-pay-gap-is-still-an-issue-in-the-us-133006829.html" target="_blank">Read More</a>
             </div>
-            <div class="portfolio-item">
+            <div class="articles-item">
                 <h3>How CVS evolved from retail pharmacy into health care behemoth</h3>
                 <p>CVS came to dominate the retail pharmacy industry and beyond. Some experts wonder whether retail's reach into health care could go too far.</p>
                 <a href="https://finance.yahoo.com/news/how-cvs-evolved-from-retail-pharmacy-into-health-care-behemoth-130515054.html" target="_blank">Read More</a>
